# gosybench

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  setup.cfg  tox.ini  tree.json
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
benchmark/papers/ja074300t/: doi.txt  extracted_graph_gpt35_text.pickle  extracted_graph_gpt35_text_.pickle  extracted_graph_gpt35_text_select.pickle  extracted_graph_gpt35_vision.pickle  extracted_graph_gpt35_vision_.pickle  extracted_graph_gpt35_vision_select.pickle  extracted_graph_gpt4o_text_.pickle  extracted_graph_gpt4o_text_select.pickle  extracted_graph_gpt4o_vision_.pickle  extracted_graph_gpt4o_vision_select.pickle  extracted_graph_gpt4t_text.pickle  extracted_graph_gpt4t_text_.pickle  extracted_graph_gpt4t_text_select.pickle  extracted_graph_gpt4t_vision.pickle  extracted_graph_gpt4t_vision_.pickle  extracted_graph_gpt4t_vision_select.pickle  gt_graph.pickle
benchmark/papers/ja512124c/: doi.txt
benchmark/papers/jacs.0c00308/: doi.txt  extracted_graph_gpt35_text_.pickle  extracted_graph_gpt35_text_select.pickle  extracted_graph_gpt35_vision_.pickle  extracted_graph_gpt4o_text_.pickle  (+8 more)
data/benchmarks/: bad_products.json  products.json  samples_iupac.json
docs/source/: api.rst  cli.rst  conf.py  examples.rst  index.rst  installation.rst  usage.rst
notebooks/: benchmark.ipynb  compare_graphs_dev.ipynb  curate_benchmark.ipynb  results.ipynb
notebooks/clean_nbs/: 00_preprocess.ipynb  03_nomic_atlas.ipynb  utils.py
notebooks/examples/: full_paper_extraction.ipynb
notebooks/explor_chem_nlp/: 00_preprocess.ipynb  01_map_embedds.ipynb  03_nomic_atlas.ipynb  utils.py
scripts/: all_papers.py  map_full_uspto.py  synext.py
scripts/benchmarks/: bad_prod_bench.py  collect_data_iupac.py  dataset_stats.py  prod_bench.py  random_si.sh  run_bench.py  run_benchmark_papers.py  run_evaluations.py
src/gosybench/: __init__.py  api.py  basetypes.py  cli.py  evaluate.py  logger.py  task.py
src/jasyntho/: __init__.py  __main__.py  api.py  cli.py  utils.py  version.py
src/syn2act/: __init__.py  __main__.py  api.py  cli.py  version.py
tests/: __init__.py  test_extract.py  test_segment.py  test_si_synth.py  test_syndocument.py  test_synparagraph.py  test_synthtrees.py  test_version.py
tests/metrics/: test_describe_tree.py  test_graph_eval.py
tests/synth_child_io/: sample.json
(+362 files in other folders)
